--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,7 +1,7 @@
 name: hpcore
 description: Task management app for HPC
 
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 version: 0.0.1+1
 
@@ -12,7 +12,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-
+  uuid: ^4.4.2
   logger: ^2.3.0
   english_words: ^4.0.0
   provider: ^6.1.2
